# svg-tree-builder

./: LICENSE  README.md  pyproject.toml
src/: builder.py  main.py
svg_tree_builder/: __main__.py  builder.py  main.py
